--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "3.7",
     "mongoose": "^8.2.3",
     "nodemon": "^3.1.0"
   }
